Major renaming for SHBE and ONSPD moves.